# pay.conductor-sdk-server-js

./: README.md  package-lock.json  package.json
examples/typescript/: README.md  index.ts  package-lock.json  package.json
scripts/: sdk.ts
src/v1/: openapi.json  openapi.yaml
src/v1/c/: CMakeLists.txt  README.md
src/v1/c/.openapi-generator/: FILES
src/v1/c/api/: CardTokenizationAPI.c  CardTokenizationAPI.h  CustomersAPI.c  CustomersAPI.h  OrdersAPI.c  OrdersAPI.h  PedidosAPI.c  PedidosAPI.h  SaquesETransfernciasAPI.c  SaquesETransfernciasAPI.h  WithdrawalsAndTransfersAPI.c  WithdrawalsAndTransfersAPI.h
src/v1/c/docs/: CardTokenizationAPI.md  CustomersAPI.md  OrdersAPI.md  PedidosAPI.md  SaquesETransfernciasAPI.md  WithdrawalsAndTransfersAPI.md  bank_slip.md  bank_slip_expiration_in_days.md  boleto.md  boleto_expiration_in_days.md  cart_o_de_cr_dito.md  cart_o_de_cr_dito_card.md  cart_o_de_cr_dito_installments.md  cart_o_tokenizado.md  cliente.md  complete_card_data.md  complete_card_data_expiration.md  credit_card.md  credit_card_card.md  credit_card_installments.md  customer.md  customer_1.md  customer_2.md  customer_2_document_type.md  customer_address.md  dados_completos_do_cart_o.md  dados_completos_do_cart_o_expiration.md  endere_o_do_cliente.md  merchant_input.md  nu_pay.md  nu_pay_nu_pay.md  pic_pay.md  pix.md  pix_expiration_in_seconds.md  post_card_tokenization_200_response.md  post_card_tokenization_request.md  post_card_tokenization_request_customer.md  post_card_tokenization_request_customer_any_of.md  post_orders_200_response.md  post_orders_200_response_bank_slip.md  (+17 more)
src/v1/c/include/: apiClient.h
src/v1/c/model/: bank_slip.c  bank_slip.h  bank_slip_expiration_in_days.c  bank_slip_expiration_in_days.h  boleto.c  boleto.h  boleto_expiration_in_days.c  boleto_expiration_in_days.h  cart_o_de_cr_dito.c  cart_o_de_cr_dito.h  cart_o_de_cr_dito_card.c  cart_o_de_cr_dito_card.h  cart_o_de_cr_dito_installments.c  cart_o_de_cr_dito_installments.h  cart_o_tokenizado.c  cart_o_tokenizado.h  cliente.c  cliente.h  complete_card_data.c  complete_card_data.h  complete_card_data_expiration.c  complete_card_data_expiration.h  credit_card.c  credit_card.h  credit_card_card.c  credit_card_card.h  credit_card_installments.c  credit_card_installments.h  customer.c  customer.h  customer_1.c  customer_1.h  customer_2.c  customer_2.h  customer_2_document_type.c  customer_2_document_type.h  customer_address.c  customer_address.h  dados_completos_do_cart_o.c  dados_completos_do_cart_o.h  (+62 more)
src/v1/c/src/: apiClient.c
src/v1/c/unit-test/: test_bank_slip.c  test_bank_slip_expiration_in_days.c  test_boleto.c  test_boleto_expiration_in_days.c  test_cart_o_de_cr_dito.c  test_cart_o_de_cr_dito_card.c  test_cart_o_de_cr_dito_installments.c  test_cart_o_tokenizado.c  test_cliente.c  test_complete_card_data.c  test_complete_card_data_expiration.c  test_credit_card.c  test_credit_card_card.c  test_credit_card_installments.c  test_customer.c  test_customer_1.c  test_customer_2.c  test_customer_2_document_type.c  test_customer_address.c  test_dados_completos_do_cart_o.c  test_dados_completos_do_cart_o_expiration.c  test_endere_o_do_cliente.c  test_merchant_input.c  test_nu_pay.c  test_nu_pay_nu_pay.c  test_pic_pay.c  test_pix.c  test_pix_expiration_in_seconds.c  test_post_card_tokenization_200_response.c  test_post_card_tokenization_request.c  test_post_card_tokenization_request_customer.c  test_post_card_tokenization_request_customer_any_of.c  test_post_orders_200_response.c  test_post_orders_200_response_bank_slip.c  test_post_orders_200_response_credit_card.c  test_post_orders_200_response_nu_pay.c  test_post_orders_200_response_order_items_inner.c  test_post_orders_200_response_pic_pay.c  test_post_orders_200_response_pix.c  test_post_orders_200_response_session.c  (+11 more)
src/v1/clojure/: project.clj
src/v1/clojure/.openapi-generator/: FILES
src/v1/csharp/: README.md  appveyor.yml  payconductor-sdk.sln
src/v1/csharp/.openapi-generator/: FILES
src/v1/csharp/api/: openapi.yaml
src/v1/dart/: README.md
src/v1/dart/.openapi-generator/: FILES
src/v1/dart/doc/: BankSlip.md  BankSlipExpirationInDays.md  Boleto.md  BoletoExpirationInDays.md  CardTokenizationApi.md  CartODeCrDito.md  CartODeCrDitoCard.md  CartODeCrDitoInstallments.md  CartOTokenizado.md  Cliente.md  CompleteCardData.md  CompleteCardDataExpiration.md  (+45 more)
src/v1/elixir/: README.md  mix.exs
src/v1/go/: README.md  api_card_tokenization.go  api_customers.go  api_orders.go  api_pedidos.go  api_saques_e_transferncias.go  api_withdrawals_and_transfers.go  client.go  configuration.go  model_bank_slip.go  model_bank_slip_expiration_in_days.go  model_boleto.go  model_boleto_expiration_in_days.go  model_cart_o_de_cr_dito.go  model_cart_o_de_cr_dito_card.go  model_cart_o_de_cr_dito_installments.go  model_cart_o_tokenizado.go  model_cliente.go  model_complete_card_data.go  model_complete_card_data_expiration.go  model_credit_card.go  model_credit_card_card.go  model_credit_card_installments.go  model_customer.go  model_customer_1.go  model_customer_2.go  model_customer_2_document_type.go  model_customer_address.go  model_dados_completos_do_cart_o.go  model_dados_completos_do_cart_o_expiration.go  model_endere_o_do_cliente.go  model_merchant_input.go  model_nu_pay.go  model_nu_pay_nu_pay.go  model_pic_pay.go  model_pix.go  model_pix_expiration_in_seconds.go  model_post_card_tokenization_200_response.go  model_post_card_tokenization_request.go  model_post_card_tokenization_request_customer.go  (+22 more)
src/v1/java/: README.md
src/v1/javascript/: README.md  package.json
src/v1/kotlin/: README.md
src/v1/lua/: payconductor-sdk-1.0.0-1.rockspec
src/v1/perl/: README.md
src/v1/php/: README.md  composer.json
src/v1/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
src/v1/r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
src/v1/ruby/: README.md  openapi_client.gemspec
src/v1/rust/: Cargo.toml  README.md
src/v1/typescript/: README.md  api.ts  base.ts  common.ts  configuration.ts  index.ts  package.json
(+2232 files in other folders)
